--- a/rule4be/templates/rule4be/today.html
+++ b/rule4be/templates/rule4be/today.html
@@ -10,16 +10,18 @@
     </div>
 </form>
 
-<ul>
+<div>
     {% for snapshot in api_data %}
-    <li>
+    <div>
         <strong>Body:</strong> {{ snapshot.body }}<br>
         <strong>AOL:</strong> {{ snapshot.area_of_life }}<br>
         <strong>Owner:</strong> {{ snapshot.owner }}<br>
         <strong>Created:</strong> {{ snapshot.created }}<br>
-    </li>
+    </div>
     {% endfor %}
-</ul>
+</div>
+
+
 
 <!-- Display the result of the login attempt -->
 <div id="login-result"></div>
