--- a/rule4be/templates/rule4be/aols.html
+++ b/rule4be/templates/rule4be/aols.html
@@ -6,48 +6,23 @@
 
 <div class="aol-container">
     {% for area_of_life in aols %}
+
     <div class="aol-item">
-        <form hx-get="{% url 'load_today_snapshot_page' area_of_life.id %}" hx-trigger="submit" hx-target="#login-form"
-            id="login-form">
+        <form hx-get="{% url 'load_today_snapshot_page' area_of_life.id %}" hx-trigger="load"
+            hx-target="#today-{{ area_of_life.id }}" id="login-form">
+
             {% csrf_token %}
+
             <input type="hidden" name="area_of_life" value="{{ area_of_life.id }}">
             <input type="hidden" name="user" value="{{ request.user.id }}">
-            <strong>Name:</strong> {{ area_of_life.name }}<br>
-            <strong>Description:</strong> {{ area_of_life.description }}<br>
-            <strong>ID:</strong> {{ area_of_life.id }}<br>
-            <strong>Owner:</strong> {{ area_of_life.owner }}<br>
+            <h1>{{ area_of_life.name }}</h1>
+            <p>{{ area_of_life.description }}</p>
             <button type="submit">Add a snapshot</button>
         </form>
+        <br>
 
+        <div id="today-{{ area_of_life.id }}"></div>
         <!-- Display snapshots for the current AOL -->
-        <div>
-            <h2>Snapshots</h2>
-            {% for snapshot in area_of_life.snapshots.last_year %}
-            <div class="snapshot-item">
-                <strong>Last Year:</strong> {{ snapshot }}
-            </div>
-            {% endfor %}
-            {% for snapshot in area_of_life.snapshots.last_month %}
-            <div class="snapshot-item">
-                <strong>Last Month:</strong> {{ snapshot }}
-            </div>
-            {% endfor %}
-            {% for snapshot in area_of_life.snapshots.last_week %}
-            <div class="snapshot-item">
-                <strong>Last Week:</strong> {{ snapshot }}
-            </div>
-            {% endfor %}
-            {% for snapshot in area_of_life.snapshots.yesterday %}
-            <div class="snapshot-item">
-                <strong>Last Yesterday:</strong> {{ snapshot }}
-            </div>
-            {% endfor %}
-            {% for snapshot in area_of_life.snapshots.today %}
-            <div class="snapshot-item">
-                <strong>Last Today:</strong> {{ snapshot }}
-            </div>
-            {% endfor %}
-        </div>
     </div>
     {% endfor %}
 </div>
