--- a/rule4be/templates/rule4be/login.html
+++ b/rule4be/templates/rule4be/login.html
@@ -23,5 +23,7 @@
 <!-- Display the result of the login attempt -->
 <div id="login-result"></div>
 
+<a href="{% url 'signup' %}">Sign Up</a>
+
 {% endblock %}
 ```
