--- a/rule4be/templates/rule4be/today.html
+++ b/rule4be/templates/rule4be/today.html
@@ -8,6 +8,20 @@
         <h4>{{ snapshot.relative_date }}:</h4>
         <p>{{ snapshot.body }}</p>
 
+        {% if snapshot.image %}
+        <div>
+            <img src="{{ snapshot.image.url }}" alt="Snapshot Image" style="max-width: 100%;">
+        </div>
+        {% endif %}
+
+        {% if snapshot.video %}
+        <div>
+            <video controls style="max-width: 100%;">
+                <source src="{{ snapshot.video.url }}" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        {% endif %}
     </div>
     <br>
     {% endfor %}
