--- a/rule4be/templates/rule4be/aols.html
+++ b/rule4be/templates/rule4be/aols.html
@@ -2,39 +2,70 @@
 {% load static %}
 
 {% block content %}
-<h1 class="font-semibold text-2xl">AOLS - List of user's AOLs</h1>
-<div class="mt-10">
-    <div id="create-form"></div>
-    <button
-        hx-get="{% url 'create_aol' %}"
-        hx-headers='{"Content-Type":"text/html"}'
-        hx-accept="text/html"
-        hx-trigger="click"
-        hx-target="#create-form"
-        hx-swap="outerHTML">
-            <i class="icon icon--add"></i>
-    </button>
+<div class="flex justify-start items-center">
+    <h1 class="font-semibold text-3xl">Areas of Life</h1>
+    <div class="ms-5">
+        <div id="create-form"></div>
+        <button
+            hx-get="{% url 'create_aol' %}"
+            hx-headers='{"Content-Type":"text/html"}'
+            hx-accept="text/html"
+            hx-trigger="click"
+            hx-target="#create-form"
+            hx-swap="outerHTML">
+                <i class="icon icon--add"></i>
+        </button>
+    </div>
 </div>
 
-<div class="aol-container flex gap-4">
+<div class="aol-container flex gap-4 mt-12">
     {% for area_of_life in aols %}
 
     <div class="aol-item card">
+        <div class="flex justify-between items-start">
+            <div class="aol-details">
+                <h1 class="font-semibold text-xl">{{ area_of_life.name }}</h1>
+                <p>{{ area_of_life.description }}</p>
+            </div>
+            <div
+                class="aol-tools relative"
+                x-data="{ open: false}">
+                <button
+                    @click="open = ! open">
+                    <i class="fa-light fa-ellipsis-vertical"></i>
+                </button>           
+                <div
+                    class="flex justify-between items-center gap-x-4 bg-white p-2 rounded-md shadow border border-gray-100 absolute -top-12 -right-4"
+                    x-show="open"
+                    x-transition
+                    @click.away="open = false"
+                    >
+                    <button hx-get="{% url 'edit_aol' area_of_life.id %}" hx-headers='{"Content-Type":"text/html"}'
+                        hx-accept="text/html" hx-target="#create-form-{{ area_of_life.id }}" hx-trigger="click" hx-swap="outerHTML">
+                        <i class="icon icon--edit"></i>
+                    </button>
+                    <button
+                        hx-get="{% url 'delete_aol' area_of_life.id %}"
+                        hx-headers='{"Content-Type":"text/html"}'
+                        hx-accept="text/html" hx-target="#create-form-{{ area_of_life.id }}"
+                        hx-trigger="click"
+                        hx-swap="outerHTML">
+                        <i class="icon icon--delete"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <button
+            class="bg-white aspect-square w-[28px] h-[28px] p-2 rounded-full shadow border border-gray-100 flex justify-center items-center mt-4"
+            hx-get="{% url 'create_snapshot' area_of_life.id %}"
+            hx-headers='{"Content-Type":"text/html"}'
+            hx-accept="text/html"
+            hx-target="#create-form-{{ area_of_life.id }}"
+            hx-trigger="click"
+            hx-swap="outerHTML">
+            <i class="icon icon--add m-0 aspect-square"></i>
+        </button>
         <div id="create-form-{{ area_of_life.id }}"></div>
-        <button hx-get="{% url 'create_snapshot' area_of_life.id %}" hx-headers='{"Content-Type":"text/html"}'
-            hx-accept="text/html" hx-target="#create-form-{{ area_of_life.id }}" hx-trigger="click" hx-swap="outerHTML">
-            <i class="icon icon--add"></i>
-        </button>
-        <h1>{{ area_of_life.name }}</h1>
-        <p>{{ area_of_life.description }}</p>
-        <button hx-get="{% url 'edit_aol' area_of_life.id %}" hx-headers='{"Content-Type":"text/html"}'
-            hx-accept="text/html" hx-target="#create-form-{{ area_of_life.id }}" hx-trigger="click" hx-swap="outerHTML">
-            <i class="icon icon--edit"></i>
-        </button>
-        <button hx-get="{% url 'delete_aol' area_of_life.id %}" hx-headers='{"Content-Type":"text/html"}'
-            hx-accept="text/html" hx-target="#create-form-{{ area_of_life.id }}" hx-trigger="click" hx-swap="outerHTML">
-            <i class="icon icon--delete"></i>
-        </button>
         <div hx-get="{% url 'load_today_snapshot_page' area_of_life.id %}" hx-trigger="load"
             hx-target="#today-{{ area_of_life.id }}" hx-headers='{"Content-Type":"text/html"}' hx-accept="text/html">
 
@@ -48,16 +79,7 @@
 
     {% endfor %}
 </div>
-<button
-    id="alpineTest"
-    class="border border-gray-300 bg-gray-100 p-2 rounded-md mt-4"
-    x-data>Alpine should replace this text</button>
 
 <!-- Display the result of the login attempt -->
 <div id="login-result"></div>
-<script>
-    document.getElementById('alpineTest').addEventListener('click', function() {
-        document.getElementById('alpineTest').innerText = 'Alpine replaced this text';
-    });
-</script>
 {% endblock %}
