--- a/rule4be/templates/rule4be/main.html
+++ b/rule4be/templates/rule4be/main.html
@@ -30,7 +30,7 @@
 
 <body class="bg-gray-50">
     <main class="w-full min-h-screen flex flex-col bg-gray-50">
-        <div class="page-content__container mx-auto min-w-[960px] mt-5">
+        <div class="page-content__container mx-auto lg:w-[1440px] mt-5">
             {% block content %}
         
             {% endblock %}
