--- a/static/css/tailwind/tailwind-output.css
+++ b/static/css/tailwind/tailwind-output.css
@@ -643,7 +643,7 @@ body > main {
 }
 
 .icon--edit:before {
-  content: "\f044";
+  content: "\f303";
 }
 
 .icon--delete {
@@ -1062,7 +1062,7 @@ button[type="submit"]:disabled:hover {
 /* Cards - General */
 
 .card {
-  border-radius: 1.5rem;
+  border-radius: 0.75rem;
   border-width: 1px;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1177,8 +1177,36 @@ button[type="submit"]:disabled:hover {
   top: 1.25rem;
 }
 
+.right-0 {
+  right: 0px;
+}
+
+.top-8 {
+  top: 2rem;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
+.-top-5 {
+  top: -1.25rem;
+}
+
+.-top-12 {
+  top: -3rem;
+}
+
+.-right-4 {
+  right: -1rem;
+}
+
 .z-50 {
   z-index: 50;
+}
+
+.m-0 {
+  margin: 0px;
 }
 
 .mx-auto {
@@ -1196,6 +1224,18 @@ button[type="submit"]:disabled:hover {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.ms-auto {
+  margin-inline-start: auto;
+}
+
+.ms-5 {
+  margin-inline-start: 1.25rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .block {
@@ -1226,6 +1266,14 @@ button[type="submit"]:disabled:hover {
   display: none;
 }
 
+.aspect-square {
+  aspect-ratio: 1 / 1;
+}
+
+.h-\[28px\] {
+  height: 28px;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1234,8 +1282,8 @@ button[type="submit"]:disabled:hover {
   width: 100%;
 }
 
-.min-w-\[960px\] {
-  min-width: 960px;
+.w-\[28px\] {
+  width: 28px;
 }
 
 .max-w-\[300px\] {
@@ -1258,8 +1306,42 @@ button[type="submit"]:disabled:hover {
   align-content: flex-start;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
 }
 
 .rounded-lg {
@@ -1270,6 +1352,10 @@ button[type="submit"]:disabled:hover {
   border-radius: 0.375rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .border {
   border-width: 1px;
 }
@@ -1277,6 +1363,11 @@ button[type="submit"]:disabled:hover {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 
 .bg-gray-100 {
@@ -1294,12 +1385,21 @@ button[type="submit"]:disabled:hover {
   background-color: rgb(240 253 244 / var(--tw-bg-opacity));
 }
 
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .p-2 {
   padding: 0.5rem;
 }
 
 .p-3 {
   padding: 0.75rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .text-center {
@@ -1313,6 +1413,16 @@ button[type="submit"]:disabled:hover {
 
 .text-lg {
   font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -1330,12 +1440,31 @@ button[type="submit"]:disabled:hover {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.fa-light {
+  font-family: "Font Awesome 6 Pro";
+  font-style: normal;
+  font-weight: 300;
+  text-transform: none;
 }
 
 .fa-user::before {
@@ -1347,3 +1476,9 @@ button[type="submit"]:disabled:hover {
 }
 
 /* FontAwesome Classes */
+
+@media (min-width: 1024px) {
+  .lg\:w-\[1440px\] {
+    width: 1440px;
+  }
+}
