Set up User Profile VTU and Model

--- a/rule4be/templates/rule4be/main.html
+++ b/rule4be/templates/rule4be/main.html
@@ -11,7 +11,8 @@
         crossorigin="anonymous"></script> -->
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@100;200;300;400;600;700&display=swap"
+        rel="stylesheet">
 
     <!-- Tailwind CSS - Must load before JavaScript files -->
     <link rel="stylesheet" href="{% static 'css/tailwind/tailwind-output.css' %}">
@@ -32,16 +33,17 @@
     <main class="w-full min-h-screen flex flex-col bg-gray-50">
         <div class="page-content__container mx-auto lg:w-[1440px] mt-5">
             {% block content %}
-        
+
             {% endblock %}
         </div>
     </main>
     <!-- Status Toast -->
-    <div id="statusToast" class="status__message toast-container z-50 fixed top-5 right-5 bg-green-50 text-lg font-medium text-center rounded-lg p-3 w-full max-w-[300px] shadow-lg hidden">
+    <div id="statusToast"
+        class="status__message toast-container z-50 fixed top-5 right-5 bg-green-50 text-lg font-medium text-center rounded-lg p-3 w-full max-w-[300px] shadow-lg hidden">
         <div class="toast copy-text-toast bg-green-50" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-body text-center fs-4 p-3">
                 {% if message %}
-                    {{ message }}
+                {{ message }}
                 {% endif %}
             </div>
         </div>
