--- a/rule4be/templates/rule4be/aols.html
+++ b/rule4be/templates/rule4be/aols.html
@@ -6,14 +6,9 @@
     <h1 class="font-semibold text-3xl">Areas of Life</h1>
     <div class="ms-5">
         <div id="create-form"></div>
-        <button
-            hx-get="{% url 'create_aol' %}"
-            hx-headers='{"Content-Type":"text/html"}'
-            hx-accept="text/html"
-            hx-trigger="click"
-            hx-target="#create-form"
-            hx-swap="outerHTML">
-                <i class="icon icon--add"></i>
+        <button hx-get="{% url 'create_aol' %}" hx-headers='{"Content-Type":"text/html"}' hx-accept="text/html"
+            hx-trigger="click" hx-target="#create-form" hx-swap="outerHTML">
+            <i class="icon icon--add"></i>
         </button>
     </div>
 </div>
@@ -27,28 +22,19 @@
                 <h1 class="font-semibold text-xl">{{ area_of_life.name }}</h1>
                 <p>{{ area_of_life.description }}</p>
             </div>
-            <div
-                class="aol-tools relative"
-                x-data="{ open: false}">
-                <button
-                    @click="open = ! open">
+            <div class="aol-tools relative" x-data="{ open: false}">
+                <button @click="open = ! open">
                     <i class="fa-light fa-ellipsis-vertical"></i>
-                </button>           
-                <div
-                    class="flex justify-between items-center gap-x-4 bg-white p-2 rounded-md shadow border border-gray-100 absolute -top-12 -right-4"
-                    x-show="open"
-                    x-transition
-                    @click.away="open = false"
-                    >
+                </button>
+                <div class="flex justify-between items-center gap-x-4 bg-white p-2 rounded-md shadow border border-gray-100 absolute -top-12 -right-4"
+                    x-show="open" x-transition @click.away="open = false">
                     <button hx-get="{% url 'edit_aol' area_of_life.id %}" hx-headers='{"Content-Type":"text/html"}'
-                        hx-accept="text/html" hx-target="#create-form-{{ area_of_life.id }}" hx-trigger="click" hx-swap="outerHTML">
+                        hx-accept="text/html" hx-target="#create-form-{{ area_of_life.id }}" hx-trigger="click"
+                        hx-swap="outerHTML">
                         <i class="icon icon--edit"></i>
                     </button>
-                    <button
-                        hx-get="{% url 'delete_aol' area_of_life.id %}"
-                        hx-headers='{"Content-Type":"text/html"}'
-                        hx-accept="text/html" hx-target="#create-form-{{ area_of_life.id }}"
-                        hx-trigger="click"
+                    <button hx-get="{% url 'delete_aol' area_of_life.id %}" hx-headers='{"Content-Type":"text/html"}'
+                        hx-accept="text/html" hx-target="#create-form-{{ area_of_life.id }}" hx-trigger="click"
                         hx-swap="outerHTML">
                         <i class="icon icon--delete"></i>
                     </button>
@@ -57,12 +43,8 @@
         </div>
         <button
             class="bg-white aspect-square w-[28px] h-[28px] p-2 rounded-full shadow border border-gray-100 flex justify-center items-center mt-4"
-            hx-get="{% url 'create_snapshot' area_of_life.id %}"
-            hx-headers='{"Content-Type":"text/html"}'
-            hx-accept="text/html"
-            hx-target="#create-form-{{ area_of_life.id }}"
-            hx-trigger="click"
-            hx-swap="outerHTML">
+            hx-get="{% url 'create_snapshot' area_of_life.id %}" hx-headers='{"Content-Type":"text/html"}'
+            hx-accept="text/html" hx-target="#create-form-{{ area_of_life.id }}" hx-trigger="click" hx-swap="outerHTML">
             <i class="icon icon--add m-0 aspect-square"></i>
         </button>
         <div id="create-form-{{ area_of_life.id }}"></div>
@@ -79,7 +61,7 @@
 
     {% endfor %}
 </div>
-
+<div><a href="{% url 'load_user_profile' %}">My Profile</a></div>
 <!-- Display the result of the login attempt -->
 <div id="login-result"></div>
 {% endblock %}
