--- a/rule4be/templates/rule4be/aols.html
+++ b/rule4be/templates/rule4be/aols.html
@@ -8,15 +8,16 @@
         <div id="create-form"></div>
         <button hx-get="{% url 'create_aol' %}" hx-headers='{"Content-Type":"text/html"}' hx-accept="text/html"
             hx-trigger="click" hx-target="#create-form" hx-swap="outerHTML">
-            <i class="icon icon--add"></i>
+            <i class="icon icon--add text-lg"></i>
         </button>
     </div>
+    <div class="ms-auto"><a href="{% url 'load_user_profile' %}"><i class="icon--user text-lg"></i></a></div>
 </div>
 
-<div class="aol-container flex gap-4 mt-12">
+<div class="aol-container grid md:grid-cols-2 lg:grid-cols-4 gap-4 mt-12 px-5">
     {% for area_of_life in aols %}
 
-    <div class="aol-item card">
+    <div class="aol-item card shadow-md">
         <div class="flex justify-between items-start">
             <div class="aol-details">
                 <h1 class="font-semibold text-xl">{{ area_of_life.name }}</h1>
@@ -24,7 +25,7 @@
             </div>
             <div class="aol-tools relative" x-data="{ open: false}">
                 <button @click="open = ! open">
-                    <i class="fa-light fa-ellipsis-vertical"></i>
+                    <i class="fa-regular fa-ellipsis-vertical text-lg text-blue-500"></i>
                 </button>
                 <div class="flex justify-between items-center gap-x-4 bg-white p-2 rounded-md shadow border border-gray-100 absolute -top-12 -right-4"
                     x-show="open" x-transition @click.away="open = false">
@@ -42,14 +43,19 @@
             </div>
         </div>
         <button
-            class="bg-white aspect-square w-[28px] h-[28px] p-2 rounded-full shadow border border-gray-100 flex justify-center items-center mt-4"
+            class="bg-white aspect-square w-[28px] h-[28px] p-2 rounded-full border border-gray-100 flex justify-center items-center mt-4 shadow-sm hover:shadow-none transition-all"
             hx-get="{% url 'create_snapshot' area_of_life.id %}" hx-headers='{"Content-Type":"text/html"}'
             hx-accept="text/html" hx-target="#create-form-{{ area_of_life.id }}" hx-trigger="click" hx-swap="outerHTML">
             <i class="icon icon--add m-0 aspect-square"></i>
         </button>
         <div id="create-form-{{ area_of_life.id }}"></div>
-        <div hx-get="{% url 'load_today_snapshot_page' area_of_life.id %}" hx-trigger="load"
-            hx-target="#today-{{ area_of_life.id }}" hx-headers='{"Content-Type":"text/html"}' hx-accept="text/html">
+        <div
+            data-snapshot-today
+            hx-get="{% url 'load_today_snapshot_page' area_of_life.id %}"
+            hx-trigger="load"
+            hx-target="#today-{{ area_of_life.id }}"
+            hx-headers='{"Content-Type":"text/html"}'
+            hx-accept="text/html">
 
         </div>
 
@@ -61,7 +67,7 @@
 
     {% endfor %}
 </div>
-<div><a href="{% url 'load_user_profile' %}">My Profile</a></div>
+
 <!-- Display the result of the login attempt -->
 <div id="login-result"></div>
 {% endblock %}
