--- a/rule4be/templates/rule4be/trial_expired.html
+++ b/rule4be/templates/rule4be/trial_expired.html
@@ -13,7 +13,7 @@
 <p>Subscription Cancellation Date: {{profile.subscription_cancellation_date}}</p>
 {% endif %}
 
-<a href="{% url 'load_aols_page' %}">Subscribe Now</a>
+<a href="{% url 'subscribe' %}">Subscribe Now</a>
 
 {% endblock %}
 ```
