Correct expired Login process

--- a/rule4be/templates/rule4be/subscribe.html
+++ b/rule4be/templates/rule4be/subscribe.html
@@ -17,8 +17,8 @@
         <!--        Show product details-->
         <div class="product">
             <div class="description">
-                <h3>Starter - Monthly tennis </h3>
-                <h5>$20.00 / month</h5>
+                <h3>Rule4.App Monthly Subscription</h3>
+                <h5>$5.00 / month</h5>
             </div>
         </div>
 
