--- a/rule4be/templates/rule4be/main.html
+++ b/rule4be/templates/rule4be/main.html
@@ -26,6 +26,12 @@
     <!-- Alpine JS -->
     <script src="{% static 'alpinejs/dist/cdn.min.js' %}" defer></script>
 
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+
+    <!-- Form Valiidation -->
+    <script src="{% static 'js/form-validation.js' %}" defer></script>
+
     {% block styles %}{% endblock %}
 </head>
 
