--- a/static/css/tailwind/tailwind-output.css
+++ b/static/css/tailwind/tailwind-output.css
@@ -447,6 +447,7 @@ video {
 }
 
 html {
+  color: #475569;
   font-family: "Source Sans 3", sans-serif;
   font-size: 14px;
   font-weight: 300;
@@ -719,24 +720,51 @@ body > main {
 
 /* === Forms === */
 
+.modal-form {
+  width: 100%;
+}
+
 .modal-form .form__title,
 	.card .form__title {
-  font-size: 1.5rem;
-  line-height: 2rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
   font-weight: 500;
 }
 
-.card form {
-  padding-top: 1.25rem;
+.modal-form .form__title {
+  max-width: 75%;
 }
 
 .form-group {
   margin-top: 1.25rem;
 }
 
+.modal-form .form__label-field {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
 .form__label-field.stacked,
 	.modal-form .form__label-field.stacked {
   display: block;
+}
+
+.form__label-field:not(.form-group .form__label-field) {
+  margin-top: 0px;
+}
+
+@media (min-width: 1024px) {
+  .form__label-field:not(.form-group .form__label-field) {
+    margin-top: 0.75rem;
+  }
+}
+
+.form__label-field .form__label {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 500;
 }
 
 .form__label-field.checkbox {
@@ -755,6 +783,60 @@ body > main {
   margin: 0px;
 }
 
+.form__label.file__label {
+  margin-bottom: 0.75rem;
+  border-bottom-width: 1px;
+}
+
+.form__label-field input[type="text"],
+	.form__label-field input[type="email"],
+	.form__label-field input[type="tel"],
+	.form__label-field input[type="url"],
+	.form__label-field input[type="password"],
+	.form__label-field input[type="number"],
+	.form__label-field select,
+	.form__label-field textarea {
+  width: 100%;
+  border-radius: 0.5rem;
+  border-width: 1px;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.compact-form .form__label-field input[type="text"],
+	.compact-form .form__label-field input[type="email"],
+	.compact-form .form__label-field input[type="tel"],
+	.compact-form .form__label-field input[type="url"],
+	.compact-form .form__label-field input[type="password"],
+	.compact-form .form__label-field input[type="number"],
+	.compact-form .form__label-field select,
+	.compact-form .form__label-field textarea {
+  width: 100%;
+  border-radius: 0.5rem;
+  border-width: 1px;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.form__label-field .form__input {
+  position: relative;
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.form__label-field .form__input:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(31 41 55 / var(--tw-border-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
+}
+
 form label {
   display: flex;
   width: 100%;
@@ -768,6 +850,23 @@ form label .required {
   line-height: 1.25rem;
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.form__label-field .invalid-feedback {
+  margin-top: 0.5rem;
+  margin-bottom: 0.75rem;
+  height: 1rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.form__label-field .invalid-feedback:empty {
+  height: 0px;
 }
 
 button[type="submit"]:disabled {
@@ -790,6 +889,52 @@ button[type="submit"]:disabled:hover {
   align-items: center;
 }
 
+.file-input {
+  display: none;
+}
+
+.file-name {
+  margin-inline-start: 0.75rem;
+}
+
+.upload-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(34 197 94 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.upload-button:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+
+.modal-form p {
+  margin-top: 0.75rem;
+}
+
+.access-layout form .form__title {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 500;
+}
+
 /* == Buttons & Navigation == */
 
 .button {
@@ -800,6 +945,61 @@ button[type="submit"]:disabled:hover {
   padding-right: 1.25rem;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1;
+}
+
+.button--primary {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.button--primary,
+	.button--primary i,
+	.button--danger {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.button--primary {
+  border-width: 1px;
+}
+
+.button--primary:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.button--primary:hover i {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.button--small {
+  display: flex;
+  min-height: 30px;
+  min-width: 30px;
+  align-items: center;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.button--small,
+	.button--small span,
+	.button--small [class*="icon-"] {
+  font-size: 1rem;
+  line-height: 1.5rem;
   line-height: 1;
 }
 
@@ -1405,6 +1605,12 @@ button[type="submit"]:disabled:hover {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-inner {
+  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1441,13 +1647,6 @@ button[type="submit"]:disabled:hover {
   font-family: "Font Awesome 6 Pro";
   font-style: normal;
   font-weight: 400;
-  text-transform: none;
-}
-
-.fa-light {
-  font-family: "Font Awesome 6 Pro";
-  font-style: normal;
-  font-weight: 300;
   text-transform: none;
 }
 
